--- a/Lab 5.Rmd
+++ b/Lab 5.Rmd
@@ -76,7 +76,7 @@ tukey.outlier <- function(sa) {
 tukey.outlier(x)
 ```
 
-This is the same result we got for question 3, therefore the functin is working properly.
+This is the same result we got for question 3, therefore the function is working properly.
 
 **Question 5**
 
@@ -88,6 +88,80 @@ This is the same result we got for question 3, therefore the functin is working 
 #'
 #' @return A boolean vector that returns TRUE if the function correctly 
 #' identifies the outliers and FALSE otherwise.
-
+test.tukey.outlier <- function(fun = tukey.outlier){
+  results <- c(FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, TRUE, FALSE)
+  
+  x <-c(2.2, 7.8, -4.4, 0.0, -1.2, 3.9, 4.9, -5.7, -7.9, -4.9, 28.7, 4.9)
+  
+  if (sum(fun(x) == results) == 12){
+    return(TRUE)
+  }else{
+    return(FALSE)
+  }
+}
+  
+test.tukey.outlier()
 ```
+
+We have tested to see if the function we wrote previously is correctly identifying outliers. 
+
+**Question 6**
+
+```{r}
+quantile(sort(-x))
+# This is finding the quartiles of the data after it
+# has been sorted
+
+IQR.x1 <- quantile(-x, 0.75) - quantile(-x, 0.25)
+# This is saving the IQR to IQR.x
+# This is subtracting Q1 from Q3 to get the IQR
+
+Tukey.below <- quantile(-x, 0.25) - 1.5 * IQR.x1
+Tukey.above <- quantile(-x, 0.75) + 1.5 * IQR.x1
+# This is storing the numbers that any number from the data must be 
+# above or below in order to qualify as an outlier
+
+(-x < Tukey.below) == TRUE
+(-x > Tukey.above) == TRUE 
+# This is checking to see if there are any numbers in the data that meet this criteria
+
+-x[(-x > Tukey.above) == TRUE]
+# This is printing the number that is makiing the boolean true (aka the outlier)
+
+-x 
+# This is just printing out what -x would look like
+
+tukey.outlier(-x)
+# This is finding the outlier in the set of -x
+```
+
+The 12th value which is -28.7 should be an outlier in the data because it is far below what Tukey's rule is. We can see this by doing it by hand and by using the function tukey.outlier.
+
+**Question 7**
+
+```{r}
+#' Determine whether a function correctly computes whether or not there
+#' is an outlier in a set of data.
+#'
+#' @param fun is a function that tests for outliers
+#'
+#' @return A boolean vector that returns TRUE if the function correctly 
+#' identifies the outliers and FALSE otherwise.
+test.tukey.outlier.1 <- function(fun = tukey.outlier){
+  results <- c(FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, TRUE, FALSE)
+  
+  x <-c(2.2, 7.8, -4.4, 0.0, -1.2, 3.9, 4.9, -5.7, -7.9, -4.9, 28.7, 4.9)
+  
+  if (sum(fun(-x) == results) == 12){
+    return(TRUE)
+  }else{
+    return(FALSE)
+  }
+}
+
+test.tukey.outlier.1()
+```
+
+We can see that this is correct by the work shown in the last question.
+
 
